# snapshotter

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: AWS_RUNBOOK.md  IMPLEMENTATION_REPORT.md  LLM_ARCHITECT_PROMPT.md
src/snapshotter/: __init__.py  cli.py  git_ops.py  graph.py  job.py  main.py  pass1.py  pass2_semantic.py  read_plan.py  s3_uploader.py  utils.py  validate_basic.py
tests/: test_cli.py
